--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 @import "modern-normalize/modern-normalize.css";
 @import "tailwindcss";
-
 * {
-  font-family: "Montserrat", sans-serif;
-  box-sizing: border-box;
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
 }
 
 html,
