--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -1,24 +1,5 @@
 .mainApp {
-  width: 100;
+  width: 100%;
   height: 100%;
   background-color: #fff;
-}
-.loader {
-  width: 48px;
-  height: 48px;
-  border: 3px solid black;
-  border-bottom-color: transparent;
-  border-radius: 50%;
-  display: inline-block;
-  box-sizing: border-box;
-  animation: rotation 1s linear infinite;
-}
-
-@keyframes rotation {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
 }
