--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -1,10 +1,12 @@
 .link {
-  transition: color 0.5s ease, transform 0.5s ease;
+  transition:
+    color 0.5s ease,
+    transform 0.5s ease;
 
   &:hover {
-    color: skyblue;
+    color: white;
     &::after {
-      background-color: skyblue;
+      background-color: white;
       content: "";
       width: 100%;
       height: 1px;
@@ -15,13 +17,13 @@
   }
 
   &.active {
-    color: blue;
+    color: white;
 
     &::after {
       content: "";
       width: 100%;
       height: 1px;
-      background-color: blue;
+      background-color: white;
       display: block;
       margin-top: 2px;
       transition: background-color 0.5s ease;
